--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^6.2.10",
     "multer": "^1.4.4",
     "netlify-lambda": "^2.0.15",
+    "react": "^18.2.0",
+    "scripts": "^0.1.0",
     "serverless-http": "^3.0.1",
     "validator": "^13.7.0"
   }
